syntax = "proto3";
package proto;

import "defs.proto";

message OpenFileRequest {
    string uuid = 1;
    string file = 2;
    string directory = 3;
    string hdu = 4;
  
  }

message OpenFileACK{
    bool success = 1;
    string message = 2;
    FileInfo file_info = 3;
    FileInfoExtended file_info_extended = 4;  
}
  
  message FileCloseRequest {
    string uuid = 1;
  }